--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,11 @@
-<p>
-  header works!
-</p>
+<nav class="component-nav">
+	<a class="logo-a">
+		<h3><span class="logo-span">Vaca</span>List</h3>
+	</a>
+	<ul class="component-nav-ul">
+		<li class="component-nav-ul-li"><a href="#">{{ linkOne }}</a></li>
+		<li class="component-nav-ul-li"><a href="#">{{ linkTwo }}</a></li>
+		<li class="component-nav-ul-li"><a href="#">{{ linkThree }}</a></li>
+		<li class="component-nav-ul-li"><a href="#">{{ linkFour }}</a></li>
+	</ul>
+</nav>
