--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,3 +1,3 @@
-<p>
-  hero works!
-</p>
+<section class="hero-section">
+  <button class="hero-button" routerLink="/listings">See Current Listings</button>
+</section>
