added main-wrapper div to the main section of the site with a max-width of 1600px

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <header></header>
 <hero></hero>
-<featured-listings></featured-listings>
-<nonfeatured-listings></nonfeatured-listings>
+<div class="main-wrapper">
+	<featured-listings></featured-listings>
+	<testimonials></testimonials>
+	<nonfeatured-listings></nonfeatured-listings>
+</div>
 
   
